スマホレイアウト調整

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <meta charset="utf-8"><!--test-->
+    <meta charset="utf-8">
     <title>猫のサイト</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
@@ -63,14 +63,14 @@
           <img src="./img/header.png" alt="猫の横顔">
         </div>
         <div class="body-logo">
-          <img src="./img/CAT.png" alt="CATの大文字">
+          <img src="./img/CAT.png" alt="CATの大文字画像">
         </div>
       </div>
       <div class="body-txt-top">
         <div class="same-width">
           <article>
             <section>
-              <h1>吾輩は猫である。名前はまだ無い。</h1>
+              <h1>吾輩は猫である。</h1><h1 class="br-margin"><br class="br-sp">名前はまだ無い。</h1>
             </section>
             <section>
               <p>どこで生れたか頓と見當がつかぬ。<br>何でも薄暗いじめじめした所で<br>ニヤーニヤー泣いて居た事丈は記憶して居る<br> 吾輩はこゝで始めて人間といふものを見た。</p>
@@ -78,7 +78,7 @@
             <section>
               <p>然もあとで聞くとそれは書生といふ人間中で一番獰悪な種族であつたさうだ。<br> 此書生といふのは時々我々を捕へて煮て食ふといふ話である。</p>
             </section>
-            <section class="reigai">
+            <section id="reigai">
               然し其當時は何といふ考もなかつたから別段恐しいとも思はなかつた。<br> 但彼の掌に載せられてスーと持ち上げられた時<br> 何だかフハフハした感じが有つた許りである。
             </section>
           </article>
