cat1～3の画像位置の調整

--- a/cat2.html
+++ b/cat2.html
@@ -47,7 +47,6 @@
           <main role="main">
             <!-- Page content -->
           </main>
-          
           <!-- ドロワーメニューの利用宣言 -->
           <script>
             $(document).ready(function() {
@@ -58,7 +57,7 @@
       </div>
     </header>
     <div class="cat-body-container">
-      <div class="same-width">
+      <div class="cat-same-width">
         <div class="cat2-1 cat-picture">
           <img src="cat2/s_IMG_20181106_232602.jpg" alt="">
         </div>
