--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         <div class="same-width">
           <article>
             <section>
-              <h1>吾輩は猫である。<br class="br-sp">名前はまだ無い。</h1>
+              <h1>吾輩は猫である。<br class="br-sp"><br class="br-sp">名前はまだ無い。</span></h1>
             </section>
             <section>
               <p>どこで生れたか頓と見當がつかぬ。<br>何でも薄暗いじめじめした所で<br>ニヤーニヤー泣いて居た事丈は記憶して居る<br> 吾輩はこゝで始めて人間といふものを見た。</p>
