--- a/cat1.html
+++ b/cat1.html
@@ -47,7 +47,6 @@
           <main role="main">
             <!-- Page content -->
           </main>
-          
           <!-- ドロワーメニューの利用宣言 -->
           <script>
             $(document).ready(function() {
@@ -58,7 +57,7 @@
       </div>
     </header>
     <div class="cat-body-container">
-      <div class="same-width">
+      <div class="cat-same-width">
         <div class="cat1-1 cat-picture">
           <img src="cat1/IMG_20190205_113022.jpg" alt="">
         </div>
