cat1~3のメッセージボックスの作成と調整

--- a/cat1.html
+++ b/cat1.html
@@ -61,17 +61,32 @@
         <div class="cat1-1 cat-picture">
           <img src="cat1/IMG_20190205_113022.jpg" alt="">
         </div>
+        <div class="box25">
+          <p>テスト</p>
+        </div>
         <div class="cat1-2 cat-picture">
           <img src="cat1/IMG_20190205_113026.jpg" alt="">
+        </div>
+        <div class="box25">
+          <p>テスト</p>
         </div>
         <div class="cat1-3 cat-picture">
             <img src="cat1/IMG_20190205_113030.jpg" alt="">
         </div>
+        <div class="box25">
+          <p>テスト</p>
+        </div>
         <div class="cat1-4 cat-picture">
             <img src="cat1/IMG_20190205_113033.jpg" alt="">
         </div>
+        <div class="box25">
+          <p>テスト</p>
+        </div>
         <div class="cat1-5 cat-picture">
           <img src="cat1/IMG_20190205_113040.jpg" alt="">
+        </div>
+        <div class="box25">
+          <p>テスト</p>
         </div>
       </div>
     </div>
