--- a/cat2.html
+++ b/cat2.html
@@ -61,14 +61,26 @@
         <div class="cat2-1 cat-picture">
           <img src="cat2/s_IMG_20181106_232602.jpg" alt="">
         </div>
+        <div class="box25">
+          <p>テスト</p>
+        </div>
         <div class="cat2-2 cat-picture">
           <img src="cat2/s_IMG_20161211_184442.jpg" alt="">
+        </div>
+        <div class="box25">
+          <p>テスト</p>
         </div>
         <div class="cat2-3 cat-picture">
           <img src="cat2/s_IMG_20171118_111713.jpg" alt="">
         </div>
+        <div class="box25">
+          <p>テスト</p>
+        </div>
         <div class="cat2-4 cat-picture">
             <img src="cat2/s_IMG_20180309_122434.jpg" alt="">
+        </div>
+        <div class="box25">
+          <p>テスト</p>
         </div>
       </div>
     </div>
