--- a/cat3.html
+++ b/cat3.html
@@ -61,17 +61,32 @@
         <div class="cat3-1 cat-picture">
           <img src="cat3/s_yCHka3SA.jpg" alt="">
         </div>
+        <div class="box25">
+          <p>テスト</p>
+        </div>
         <div class="cat3-2 cat-picture">
           <img src="cat3/s_AI1wQaVL.jpg" alt="">
+        </div>
+        <div class="box25">
+          <p>テスト</p>
         </div>
         <div class="cat3-3 cat-picture">
             <img src="cat3/s_gZ2KAR2Z.jpg" alt="">
         </div>
+        <div class="box25">
+          <p>テスト</p>
+        </div>
         <div class="cat3-4 cat-picture">
             <img src="cat3/s_OisdSkaE.jpg" alt="">
         </div>
+        <div class="box25">
+          <p>テスト</p>
+        </div>
         <div class="cat3-5 cat-picture">
           <img src="cat3/s_6ziJE2L1.jpg" alt="">
+        </div>
+        <div class="box25">
+          <p>テスト</p>
         </div>
       </div>
     </div>
