cat1~3フッターの追加と微調整。

--- a/cat1.html
+++ b/cat1.html
@@ -59,38 +59,36 @@
     <div class="cat-body-container">
       <div class="cat-same-width">
         <div class="cat1-1 cat-picture">
-          <img src="cat1/IMG_20190205_113022.jpg" alt="">
+          <img src="cat1/IMG_20190205_113022.jpg" alt="ストーブの上に乗っているパール(猫)">
         </div>
         <div class="box25">
-          <p>テスト</p>
+          <p>パール(♀)<br><br>性格は人見知り・のんびり・人間とは付かず離れずの距離が好き・寝てばっかりzzz</p>
         </div>
         <div class="cat1-2 cat-picture">
-          <img src="cat1/IMG_20190205_113026.jpg" alt="">
-        </div>
-        <div class="box25">
-          <p>テスト</p>
+          <img src="cat1/IMG_20190205_113026.jpg" alt="下から写したパール">
         </div>
         <div class="cat1-3 cat-picture">
-            <img src="cat1/IMG_20190205_113030.jpg" alt="">
-        </div>
-        <div class="box25">
-          <p>テスト</p>
+            <img src="cat1/IMG_20190205_113030.jpg" alt="眠そうなパール">
         </div>
         <div class="cat1-4 cat-picture">
-            <img src="cat1/IMG_20190205_113033.jpg" alt="">
+            <img src="cat1/IMG_20190205_113033.jpg" alt="布団の上でくつろうでいるパール">
         </div>
-        <div class="box25">
-          <p>テスト</p>
-        </div>
-        <div class="cat1-5 cat-picture">
-          <img src="cat1/IMG_20190205_113040.jpg" alt="">
-        </div>
-        <div class="box25">
-          <p>テスト</p>
+        <div class="cat1-5 cat-picture cat-picture-end">
+          <img src="cat1/IMG_20190205_113040.jpg" alt="布団の上に横になっているパール">
         </div>
       </div>
     </div>
     <footer>
+      <div class="footer-container-bottom">
+        <div class="footer-bottom-block">
+          <div class="footer-bottom-logo">
+            <a href="index.html"><img src="img/CAT-2.png" alt="ページ下、CATのロゴ" title="Home"></a>
+          </div>
+          <div class="footer-bottom-txt">
+            <p>copyright 2018 Iam a cat</p>
+          </div>
+        </div>
+      </div>
     </footer>
   </body>
 </html>
