--- a/cat2.html
+++ b/cat2.html
@@ -59,32 +59,33 @@
     <div class="cat-body-container">
       <div class="cat-same-width">
         <div class="cat2-1 cat-picture">
-          <img src="cat2/s_IMG_20181106_232602.jpg" alt="">
+          <img src="cat2/s_IMG_20181106_232602.jpg" alt="毛布にくるまっている猫">
         </div>
         <div class="box25">
           <p>テスト</p>
         </div>
         <div class="cat2-2 cat-picture">
-          <img src="cat2/s_IMG_20161211_184442.jpg" alt="">
-        </div>
-        <div class="box25">
-          <p>テスト</p>
+          <img src="cat2/s_IMG_20161211_184442.jpg" alt="ストーブの前に座っている猫">
         </div>
         <div class="cat2-3 cat-picture">
-          <img src="cat2/s_IMG_20171118_111713.jpg" alt="">
+          <img src="cat2/s_IMG_20171118_111713.jpg" alt="毛布の上に座っている猫">
         </div>
-        <div class="box25">
-          <p>テスト</p>
-        </div>
-        <div class="cat2-4 cat-picture">
-            <img src="cat2/s_IMG_20180309_122434.jpg" alt="">
-        </div>
-        <div class="box25">
-          <p>テスト</p>
+        <div class="cat2-4 cat-picture cat-picture-end">
+            <img src="cat2/s_IMG_20180309_122434.jpg" alt="横になって寝ている猫">
         </div>
       </div>
     </div>
     <footer>
+      <div class="footer-container-bottom">
+        <div class="footer-bottom-block">
+          <div class="footer-bottom-logo">
+            <a href="index.html"><img src="img/CAT-2.png" alt="ページ下、CATのロゴ" title="Home"></a>
+          </div>
+          <div class="footer-bottom-txt">
+            <p>copyright 2018 Iam a cat</p>
+          </div>
+        </div>
+      </div>
     </footer>
   </body>
 </html>
