--- a/cat3.html
+++ b/cat3.html
@@ -59,38 +59,39 @@
     <div class="cat-body-container">
       <div class="cat-same-width">
         <div class="cat3-1 cat-picture">
-          <img src="cat3/s_yCHka3SA.jpg" alt="">
+          <img src="cat3/s_yCHka3SA.jpg" alt="目を見開いてるハリー(猫)">
         </div>
         <div class="box25">
-          <p>テスト</p>
+          <p>ハリー(♂)<br><br>おっとり、甘えん坊、寂しがり、人見知り、なれるとくっつき虫</p>
         </div>
         <div class="cat3-2 cat-picture">
-          <img src="cat3/s_AI1wQaVL.jpg" alt="">
-        </div>
-        <div class="box25">
-          <p>テスト</p>
+          <img src="cat3/s_AI1wQaVL.jpg" alt="見上げているハリー">
         </div>
         <div class="cat3-3 cat-picture">
-            <img src="cat3/s_gZ2KAR2Z.jpg" alt="">
+            <img src="cat3/s_gZ2KAR2Z.jpg" alt="ゴミ箱に入っているゆき(猫)">
         </div>
         <div class="box25">
-          <p>テスト</p>
+          <p>ゆき(♀)<br><br>気が強い、好奇心旺盛、急に寂しくなって甘える、人が大好き、でも触られるのは嫌い。</p>
         </div>
         <div class="cat3-4 cat-picture">
-            <img src="cat3/s_OisdSkaE.jpg" alt="">
+            <img src="cat3/s_OisdSkaE.jpg" alt="眠たそうに眼を閉じているゆき">
         </div>
-        <div class="box25">
-          <p>テスト</p>
-        </div>
-        <div class="cat3-5 cat-picture">
-          <img src="cat3/s_6ziJE2L1.jpg" alt="">
-        </div>
-        <div class="box25">
-          <p>テスト</p>
+        <div class="cat3-5 cat-picture cat-picture-end">
+          <img src="cat3/s_6ziJE2L1.jpg" alt="ハリーとゆきが眠っている。">
         </div>
       </div>
     </div>
     <footer>
+      <div class="footer-container-bottom">
+        <div class="footer-bottom-block">
+          <div class="footer-bottom-logo">
+            <a href="index.html"><img src="img/CAT-2.png" alt="ページ下、CATのロゴ" title="Home"></a>
+          </div>
+          <div class="footer-bottom-txt">
+            <p>copyright 2018 Iam a cat</p>
+          </div>
+        </div>
+      </div>
     </footer>
   </body>
 </html>
