Contactのform-box-topの作成

--- a/contact.html
+++ b/contact.html
@@ -56,12 +56,19 @@
         </div>
       </div>
     </header>
-    <div class="same-width">
-        <div class="contact-form">
-          <div class="form-box">
-            <h1>お問い合わせ</h1>
+    <div class="contact-form">
+      <div class="same-width">
+        <div class="form-box-top">
+          <div class="form-box-top-center">
+            <div class="form-logo">
+              <h1>お問い合わせ</h1>
+            </div>
+            <div class="cat-img">
+              <img src="./img/bbe77b970e2e53f5e59204acc09e265e.png" alt="猫の肉球">
+            </div>
           </div>
         </div>
+      </div>
     </div>
     <footer>
     </footer>
