お問い合わせフォーム途中経過１

--- a/contact.html
+++ b/contact.html
@@ -68,9 +68,30 @@
             </div>
           </div>
         </div>
+        <div class="contact-from-container">
+          <div class="form-inner-top">
+            <br><h2>猫に関するお問い合わせはこちら。</h2>
+          </div>
+          <div class="form-input">
+            <span class="form-space gray-box">お名前<span class="">必須</span></span><input type="text white-box">
+          </div>
+          <div class="form-picture">
+            <img src="./img/DzCAfrrUwAAGhUK (1).png" alt="パソコン映と映っているエモい猫(パール)">
+          </div>
+        </div>
       </div>
     </div>
-    <footer>
-    </footer>
+  　<footer>
+    　<div class="footer-container-bottom">
+        <div class="footer-bottom-block">
+          <div class="footer-bottom-logo">
+            <a href="index.html"><img src="img/CAT-2.png" alt="ページ下、CATのロゴ" title="Home"></a>
+          </div>
+          <div class="footer-bottom-txt">
+            <p>copyright 2018 Iam a cat</p>
+          </div>
+        </div>
+      </div>
+  　</footer>
   </body>
 </html>
