--- a/contact.html
+++ b/contact.html
@@ -69,12 +69,25 @@
           </div>
         </div>
         <div class="contact-from-container">
-          <div class="form-inner-top">
-            <br><h2>猫に関するお問い合わせはこちら。</h2>
-          </div>
-          <div class="form-input">
-            <span class="form-space gray-box">お名前<span class="">必須</span></span><input type="text white-box">
-          </div>
+          <div class="form-innner-container">
+            <div class="form-inner-top">
+              <br><h2>猫に関するお問い合わせはこちら。</h2>
+            </div>
+            <div class="form-input">
+              <p>お名前<span class="important">必須</span><br><input></p>
+            </div>
+            <div>
+              <p>ふりがな<span class="important">必須</span><br><input></p>
+            </div>
+            <div>
+              <p>メールアドレス<span class="important">必須</span><br><input></p>
+            </div>
+            <div>
+              <p>題名<span class="optional">任意</span><br><input></p>
+            </div>
+            <p>メッセージ本文<span class="optional">任意</span></p>
+            <textarea name="" class="contact-form-textarea"></textarea>
+            </div>
           <div class="form-picture">
             <img src="./img/DzCAfrrUwAAGhUK (1).png" alt="パソコン映と映っているエモい猫(パール)">
           </div>
