お問い合わせフォーム途中経過３

--- a/contact.html
+++ b/contact.html
@@ -80,13 +80,16 @@
               <p>ふりがな<span class="important">必須</span><br><input></p>
             </div>
             <div>
-              <p>メールアドレス<span class="important">必須</span><br><input></p>
+              <p>メールアドレス<span class="important">必須</span><br><input type="email"></p>
             </div>
             <div>
               <p>題名<span class="optional">任意</span><br><input></p>
             </div>
-            <p>メッセージ本文<span class="optional">任意</span></p>
+            メッセージ本文<span class="optional">任意</span>
             <textarea name="" class="contact-form-textarea"></textarea>
+            <div>
+              <br><input type="submit">
+            </div>
             </div>
           <div class="form-picture">
             <img src="./img/DzCAfrrUwAAGhUK (1).png" alt="パソコン映と映っているエモい猫(パール)">
@@ -94,17 +97,5 @@
         </div>
       </div>
     </div>
-  　<footer>
-    　<div class="footer-container-bottom">
-        <div class="footer-bottom-block">
-          <div class="footer-bottom-logo">
-            <a href="index.html"><img src="img/CAT-2.png" alt="ページ下、CATのロゴ" title="Home"></a>
-          </div>
-          <div class="footer-bottom-txt">
-            <p>copyright 2018 Iam a cat</p>
-          </div>
-        </div>
-      </div>
-  　</footer>
   </body>
 </html>
