お問い合わせフォーム完成

--- a/contact.html
+++ b/contact.html
@@ -57,7 +57,7 @@
       </div>
     </header>
     <div class="contact-form">
-      <div class="same-width">
+      <div class="contact-same-width">
         <div class="form-box-top">
           <div class="form-box-top-center">
             <div class="form-logo">
@@ -88,7 +88,7 @@
             メッセージ本文<span class="optional">任意</span>
             <textarea name="" class="contact-form-textarea"></textarea>
             <div>
-              <br><input type="submit">
+              <br><input type="submit" class="submit-button">
             </div>
             </div>
           <div class="form-picture">
