Contact修正試作品

--- a/test.html
+++ b/test.html
@@ -57,23 +57,34 @@
       </div>
     </header>
     <div class="cat-body-container">
-      <div class="cat-same-width">
-        <div class="cat2-1 cat-picture">
-          <img src="cat2/s_IMG_20181106_232602.jpg" alt="毛布にくるまっている猫">
-        </div>
-        <div class="box25">
-          <p>モナちゃん(♀)<br><br>
-            臆病な甘えん坊のかまってちゃん、おしゃべり、カメムシが嫌い
-            </p>
-        </div>
-        <div class="cat2-2 cat-picture">
-          <img src="cat2/s_IMG_20161211_184442.jpg" alt="ストーブの前に座っている猫">
-        </div>
-        <div class="cat2-3 cat-picture">
-          <img src="cat2/s_IMG_20171118_111713.jpg" alt="毛布の上に座っている猫">
-        </div>
-        <div class="cat2-4 cat-picture cat-picture-end">
-            <img src="cat2/s_IMG_20180309_122434.jpg" alt="横になって寝ている猫">
+        <div class="cat-same-width">
+            <div class="contact-from-container">
+                <div class="form-inner-top">
+                    <br><h2>猫に関するお問い合わせはこちら。</h2>
+                </div>
+                <form action="contact-from-next" method="POST">
+                    <div class="form-input">
+                    <p>お名前<span class="important">必須</span><br><input type="text" name="name"></p>
+                    </div>
+                    <div>
+                    <p>ふりがな<span class="important">必須</span><br><input type="name" name="kana"></p>
+                    </div>
+                    <div>
+                    <p>メールアドレス<span class="important">必須</span><br><input type="email" name="e-mail"></p>
+                    </div>
+                    <div>
+                    <p>題名<span class="optional">任意</span><br><input type="text" name="title"></p>
+                    </div>
+                    メッセージ本文<span class="optional2">任意</span>
+                    <textarea class="contact-form-textarea" type="text" name="content"></textarea>
+                    <div>
+                    <br><input type="submit" class="submit-button">
+                    </div>
+                </form>
+            </div>
+            <div class="form-picture">
+                <img src="./img/DzCAfrrUwAAGhUK (1).png" alt="パソコン映と映っているエモい猫(パール)">
+            </div>
         </div>
       </div>
     </div>
