--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,7 @@
 <html lang="ja">
   <head>
     <meta charset="utf-8">
-    <title>contact</title>
+    <title>Contact</title>
     <link rel="stylesheet" href="css/style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   </head>
@@ -57,8 +57,8 @@
         </div>
       </div>
     </header>
-    <div class="contact-form">
-      <div class="contact-same-width">
+    <div class="cat-body-container">
+      <div class="cat-same-width">
         <div class="form-box-top">
           <div class="form-box-top-center">
             <div class="form-logo">
@@ -72,33 +72,45 @@
         <div class="contact-from-container">
           <div class="form-innner-container">
             <div class="form-inner-top">
-              <br><h2>猫に関するお問い合わせはこちら。</h2>
+                <br><h2>猫に関するお問い合わせはこちら。</h2>
             </div>
-              <form action="contact-from-next" method="POST">
-                <div class="form-input">
-                  <p>お名前<span class="important">必須</span><br><input type="text" name="name"></p>
-                </div>
-                <div>
-                  <p>ふりがな<span class="important">必須</span><br><input type="name" name="kana"></p>
-                </div>
-                <div>
-                  <p>メールアドレス<span class="important">必須</span><br><input type="email" name="e-mail"></p>
-                </div>
-                <div>
-                  <p>題名<span class="optional">任意</span><br><input type="text" name="title"></p>
-                </div>
-                メッセージ本文<span class="optional2">任意</span>
-                <textarea class="contact-form-textarea" type="text" name="content"></textarea>
-                <div>
-                  <br><input type="submit" class="submit-button">
-                </div>
-              </form>
+            <form action="contact-from-next" method="POST">
+              <div class="form-input">
+              <p>お名前<span class="important">必須</span><br><input type="text" name="name"></p>
+              </div>
+              <div>
+              <p>ふりがな<span class="important">必須</span><br><input type="name" name="kana"></p>
+              </div>
+              <div>
+              <p>メールアドレス<span class="important">必須</span><br><input type="email" name="e-mail"></p>
+              </div>
+              <div>
+              <p>題名<span class="optional">任意</span><br><input type="text" name="title"></p>
+              </div>
+              メッセージ本文<span class="optional2">任意</span>
+              <textarea class="contact-form-textarea" type="text" name="content"></textarea>
+              <div>
+              <br><input type="submit" class="submit-button">
+              </div>
+            </form>
+            <div class="form-picture">
+              <img src="./img/DzCAfrrUwAAGhUK (1).png" alt="パソコン映と映っているエモい猫(パール)">
             </div>
-          <div class="form-picture">
-            <img src="./img/DzCAfrrUwAAGhUK (1).png" alt="パソコン映と映っているエモい猫(パール)">
           </div>
         </div>
       </div>
     </div>
+    <footer>
+      <div class="footer-container-bottom">
+        <div class="footer-bottom-block">
+          <div class="footer-bottom-logo">
+            <a href="index.html"><img src="img/CAT-2.png" alt="ページ下、CATのロゴ" title="Home"></a>
+          </div>
+          <div class="footer-bottom-txt">
+            <p>copyright 2018 Iam a cat</p>
+          </div>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
