--- a/cat1.html
+++ b/cat1.html
@@ -6,7 +6,8 @@
     <link rel="stylesheet" href="css/style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   </head>
-  <body>
+  <main>
+    <body>
     <header>
       <div class="header-container">
         <nav>
@@ -91,5 +92,6 @@
         </div>
       </div>
     </footer>
-  </body>
+    </body>
+  </main>
 </html>
