--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
   </head>
   <main>
     <body>
@@ -69,7 +70,7 @@
           <div class="same-width">
             <article>
               <section>
-                <h1>吾輩は猫である。<br class="br-sp"><br class="br-sp">名前はまだ無い。</span></h1>
+                <h1>吾輩は猫である。<br class="br-sp"><br class="br-sp">名前はまだ無い。</h1>
               </section>
               <section>
                 <p>どこで生れたか頓と見當がつかぬ。<br>何でも薄暗いじめじめした所で<br>ニヤーニヤー泣いて居た事丈は記憶して居る<br> 吾輩はこゝで始めて人間といふものを見た。</p>
@@ -242,6 +243,7 @@
           </div>
         </div>
       </footer>
+      <script src="jQuery/script.js" type="text/javascript" charset="utf-8"></script>
     </body>
   </main>
 </html>
