orderプロパティでタブレットとスマホ表示の時の画像の順番を入れ替える。

--- a/index.html
+++ b/index.html
@@ -90,22 +90,22 @@
               <p>CAT1</p>
             </div>
             <div class="second-block">
-              <div class="second-block-img btn">
+              <div class="second-block-img btn order1">
                 <img src="img/cat1-1.png" alt="抱かれている猫の写真">
               </div>
-              <div class="second-block-txt">
+              <div class="second-block-txt order2">
                 <p>掌の上で少し落ち付いて書生の顔を見たのが所謂人間といふものゝ見始であらう。此時妙なものだと思つた感じが今でも殘つて居る。第一毛を以て装飾されべき筈の顔がつるつるして丸で薬罐だ。其後猫にも大分逢つたがこんな片輪には一度も出會はした事がない。加之顔の眞中が餘りに突起して居る。</p>
               </div>
-              <div class="second-block-txt btn">
-                <p>そうして其穴の中から時々ぷうぷうと烟を吹く。どうも咽せぽくて實に弱つた。是が人間の飲む烟草といふものである事は漸く此頃知つた。此書生の掌の裏でしばらくはよい心持に坐つて居つたが、暫くすると非常な速力で運轉し始めた。書生が動くのか自分丈が動くのか分らないが無暗に眼が廻る。胸が惡くなる。 　</p>
+              <div class="second-block-txt btn order3">
+                <p>そうして其穴の中から時々ぷうぷうと烟を吹く。どうも咽せぽくて實に弱つた。是が人間の飲む烟草といふものである事は漸く此頃知つた。此書生の掌の裏でしばらくはよい心持に坐つて居つたが、暫くすると非常な速力で運轉し始めた。書生が動くのか自分丈が動くのか分らないが無暗に眼が廻る。胸が惡くなる。</p>
               </div>
-              <div class="second-block-img">
+              <div class="second-block-img order4">
                 <img src="img/cat1-2.png" alt="二匹の猫の写真">
               </div>
-              <div class="second-block-img btn">
+              <div class="second-block-img btn order5">
                 <img src="img/cat1-3.png" alt="あくびをしている猫の写真">
               </div>
-              <div class="second-block-txt">
+              <div class="second-block-txt order6">
                 <p>到底助からないと思つて居ると、どさりと音がして眼から火が出た。夫迄は記憶して居るがあとは何の事やらいくら考へ出さうとしても分らない。ふと氣が付いて見ると書生は居ない。澤山居つた兄弟が一疋も見えぬ。肝心の母親さへ姿を隱して仕舞つた。其上今迄の所とは違つて無暗に明るい。眼を明いて居られぬ位だ。</p>
               </div>
             </div>
