--- a/index.html
+++ b/index.html
@@ -68,20 +68,22 @@
         </div>
         <div class="body-txt-top">
           <div class="same-width">
-            <article>
-              <section>
-                <h1>吾輩は猫である。<br class="br-sp"><br class="br-sp">名前はまだ無い。</h1>
-              </section>
-              <section>
-                <p>どこで生れたか頓と見當がつかぬ。<br>何でも薄暗いじめじめした所で<br>ニヤーニヤー泣いて居た事丈は記憶して居る<br> 吾輩はこゝで始めて人間といふものを見た。</p>
-              </section>
-              <section>
-                <p>然もあとで聞くとそれは書生といふ人間中で一番獰悪な種族であつたさうだ。<br> 此書生といふのは時々我々を捕へて煮て食ふといふ話である。</p>
-              </section>
-              <section id="reigai">
-                然し其當時は何といふ考もなかつたから別段恐しいとも思はなかつた。<br> 但彼の掌に載せられてスーと持ち上げられた時<br> 何だかフハフハした感じが有つた許りである。
-              </section>
-            </article>
+            <blockquote>
+              <article>
+                <section>
+                  <h1>吾輩は猫である。<br class="br-sp"><br class="br-sp">名前はまだ無い。</h1>
+                </section>
+                <section>
+                  <p>どこで生れたか頓と見當がつかぬ。<br>何でも薄暗いじめじめした所で<br>ニヤーニヤー泣いて居た事丈は記憶して居る<br> 吾輩はこゝで始めて人間といふものを見た。</p>
+                </section>
+                <section>
+                  <p>然もあとで聞くとそれは書生といふ人間中で一番獰悪な種族であつたさうだ。<br> 此書生といふのは時々我々を捕へて煮て食ふといふ話である。</p>
+                </section>
+                <section id="reigai">
+                  然し其當時は何といふ考もなかつたから別段恐しいとも思はなかつた。<br> 但彼の掌に載せられてスーと持ち上げられた時<br> 何だかフハフハした感じが有つた許りである。
+                </section>
+              </article>
+            </blockquote>
           </div>
         </div>
         <div class="body-container-second">
@@ -94,10 +96,14 @@
                 <img src="img/cat1-1.png" alt="抱かれている猫の写真">
               </div>
               <div class="second-block-txt order2">
-                <p>掌の上で少し落ち付いて書生の顔を見たのが所謂人間といふものゝ見始であらう。此時妙なものだと思つた感じが今でも殘つて居る。第一毛を以て装飾されべき筈の顔がつるつるして丸で薬罐だ。其後猫にも大分逢つたがこんな片輪には一度も出會はした事がない。加之顔の眞中が餘りに突起して居る。</p>
+                <blockquote>
+                  <p>掌の上で少し落ち付いて書生の顔を見たのが所謂人間といふものゝ見始であらう。此時妙なものだと思つた感じが今でも殘つて居る。第一毛を以て装飾されべき筈の顔がつるつるして丸で薬罐だ。其後猫にも大分逢つたがこんな片輪には一度も出會はした事がない。加之顔の眞中が餘りに突起して居る。</p>
+                </blockquote>
               </div>
               <div class="second-block-txt btn order3">
-                <p>そうして其穴の中から時々ぷうぷうと烟を吹く。どうも咽せぽくて實に弱つた。是が人間の飲む烟草といふものである事は漸く此頃知つた。此書生の掌の裏でしばらくはよい心持に坐つて居つたが、暫くすると非常な速力で運轉し始めた。書生が動くのか自分丈が動くのか分らないが無暗に眼が廻る。胸が惡くなる。</p>
+                <blockquote>
+                  <p>そうして其穴の中から時々ぷうぷうと烟を吹く。どうも咽せぽくて實に弱つた。是が人間の飲む烟草といふものである事は漸く此頃知つた。此書生の掌の裏でしばらくはよい心持に坐つて居つたが、暫くすると非常な速力で運轉し始めた。書生が動くのか自分丈が動くのか分らないが無暗に眼が廻る。胸が惡くなる。</p>
+                </blockquote>
               </div>
               <div class="second-block-img order4">
                 <img src="img/cat1-2.png" alt="二匹の猫の写真">
@@ -106,7 +112,9 @@
                 <img src="img/cat1-3.png" alt="あくびをしている猫の写真">
               </div>
               <div class="second-block-txt order6">
-                <p>到底助からないと思つて居ると、どさりと音がして眼から火が出た。夫迄は記憶して居るがあとは何の事やらいくら考へ出さうとしても分らない。ふと氣が付いて見ると書生は居ない。澤山居つた兄弟が一疋も見えぬ。肝心の母親さへ姿を隱して仕舞つた。其上今迄の所とは違つて無暗に明るい。眼を明いて居られぬ位だ。</p>
+                <blockquote>
+                  <p>到底助からないと思つて居ると、どさりと音がして眼から火が出た。夫迄は記憶して居るがあとは何の事やらいくら考へ出さうとしても分らない。ふと氣が付いて見ると書生は居ない。澤山居つた兄弟が一疋も見えぬ。肝心の母親さへ姿を隱して仕舞つた。其上今迄の所とは違つて無暗に明るい。眼を明いて居られぬ位だ。</p>
+                </blockquote>
               </div>
             </div>
             <div class="third-block">
@@ -117,13 +125,17 @@
                 <div class="cat2-1">
                   <section>
                     <img src="img/cat2-1.png" alt="くつろいでいる猫の写真">
-                    <p>果てな何でも容子が可笑いと、のそのそ這ひ出して見ると非常に痛い。吾輩は藁の上から急に笹原の中へ棄てられたのである。</p>
+                    <blockquote>
+                      <p>果てな何でも容子が可笑いと、のそのそ這ひ出して見ると非常に痛い。吾輩は藁の上から急に笹原の中へ棄てられたのである。</p>
+                    </blockquote>
                   </section>
                 </div>
                 <div class="cat2-2">
                   <section>
                     <img src="img/cat2-2.png" alt="柵にもたれている猫の写真">
-                    <p>漸くの思ひで笹原を這ひ出すと向ふに大きな池がある。吾輩は池の前に坐つてどうしたらよからうと考へて見た。別に是といふ分別も出ない。</p>
+                    <blockquote>
+                      <p>漸くの思ひで笹原を這ひ出すと向ふに大きな池がある。吾輩は池の前に坐つてどうしたらよからうと考へて見た。別に是といふ分別も出ない。</p>
+                    </blockquote>
                   </section>
                 </div>
               </div>
@@ -138,7 +150,9 @@
             <div class="white-block">
               <div class="white-inner-block">
                 <article>
-                  <p>ニヤー、ニヤーと試みにやつて見たが誰も來ない。其内池の上をさらさらと風が渡つて日が暮れかゝる。腹が非常に減つて來た。 泣き度くても聲が出ない。仕方がない、何でもよいから食物のある所迄あるかうと決心をしてそろりそろりと池を左りに廻り始めた。 どうも非常に苦しい。そこを我慢して無理やりに這つて行くと漸くの事で何となく人間臭い所へ出た。 此所へ這入つたら、どうにかなると思つて竹垣の崩れた穴から、とある邸内にもぐり込んだ。</p>
+                  <blockquote>
+                    <p>ニヤー、ニヤーと試みにやつて見たが誰も來ない。其内池の上をさらさらと風が渡つて日が暮れかゝる。腹が非常に減つて來た。 泣き度くても聲が出ない。仕方がない、何でもよいから食物のある所迄あるかうと決心をしてそろりそろりと池を左りに廻り始めた。 どうも非常に苦しい。そこを我慢して無理やりに這つて行くと漸くの事で何となく人間臭い所へ出た。 此所へ這入つたら、どうにかなると思つて竹垣の崩れた穴から、とある邸内にもぐり込んだ。</p>
+                  </blockquote>
                 </article>
               </div>
             </div>
@@ -151,19 +165,19 @@
             </div>
             <div class="info-group">
               <div class="info-block-detail">
-                <p><span class="date">2018.02.09</span><span class="solid">新着</span><span class="txt">縁は不思議なもので、もし此竹垣が破れて居なかつたなら、</span></p>
+                <p><span class="date">2018.02.09</span><span class="solid">新着</span><span class="txt"><q>縁は不思議なもので、もし此竹垣が破れて居なかつたなら、</q></span></p>
               </div>
               <div class="info-block-detail">
-                <p><span class="date">2018.02.09</span><span class="solid">新着</span><span class="txt">吾輩は遂に路傍に餓死したかも知れんのである。一樹の蔭とはよく云つたものだ。</span></p>
+                <p><span class="date">2018.02.09</span><span class="solid">新着</span><span class="txt"><q>吾輩は遂に路傍に餓死したかも知れんのである。一樹の蔭とはよく云つたものだ。</q></span></p>
               </div>
               <div class="info-block-detail">
-                <p><span class="date">2018.02.09</span><span class="solid">新着</span><span class="txt">此垣根の穴は今日に至る迄吾輩が隣家の三毛を訪問する時の通路になつて居る。</span></p>
+                <p><span class="date">2018.02.09</span><span class="solid">新着</span><span class="txt"><q>此垣根の穴は今日に至る迄吾輩が隣家の三毛を訪問する時の通路になつて居る。</q></span></p>
               </div>
               <div class="info-block-detail">
-                <p><span class="date">2018.02.09</span><span class="solid">新着</span><span class="txt">偖邸へは忍び込んだものゝ</span></p>
+                <p><span class="date">2018.02.09</span><span class="solid">新着</span><span class="txt"><q>偖邸へは忍び込んだものゝ</q></span></p>
               </div>
               <div class="info-block-detail">
-                <p><span class="date">2018.02.09</span><span class="solid">新着</span><span class="txt">是から先どうして善いか分らない。其内に暗くなる、腹は減る、寒さは寒し、雨が降つて來るといふ 始末でもう一刻も猶豫が出來なくなつた。</span></p>
+                <p><span class="date">2018.02.09</span><span class="solid">新着</span><span class="txt"><q>是から先どうして善いか分らない。其内に暗くなる、腹は減る、寒さは寒し、雨が降つて來るといふ 始末でもう一刻も猶豫が出來なくなつた。</q></span></p>
               </div>
               <div class="info-block-detail"></div>
             </div>
@@ -178,17 +192,17 @@
             <div class="footer-block1">
               <div class="footer-logo">
                 <aside>
-                  <p>主人は餘り口を聞かぬ人と見えた。</p>
+                  <p><Q>主人は餘り口を聞かぬ人と見えた。</Q></p>
                 </aside>
               </div>
               <div class="footer-txt">
                 <aside>
                   <ul>
-                    <li>下女は口惜しさうに</li>
-                    <li>吾輩を臺所へ抛り出した。</li>
-                    <li>かくして吾輩は遂に此家を</li>
-                    <li>自分の住家と</li>
-                    <li>極める事にしたのである。</li>
+                    <li><q>下女は口惜しさうに</q></li>
+                    <li><q>吾輩を臺所へ抛り出した。</q></li>
+                    <li><q>かくして吾輩は遂に此家を</q></li>
+                    <li><q>自分の住家と</q></li>
+                    <li><q>極める事にしたのである。</q></li>
                   </ul>
                 </aside>
               </div>
@@ -202,11 +216,11 @@
               <div class="footer-txt">
                 <aside>
                   <ul>
-                    <li>下女は口惜しさうに</li>
-                    <li>吾輩を臺所へ抛り出した。</li>
-                    <li>かくして吾輩は遂に此家を</li>
-                    <li>自分の住家と</li>
-                    <li>極める事にしたのである。</li>
+                    <li><q>下女は口惜しさうに</q></li>
+                    <li><q>吾輩を臺所へ抛り出した。</q></li>
+                    <li><q>かくして吾輩は遂に此家を</q></li>
+                    <li><q>自分の住家と</q></li>
+                    <li><q>極める事にしたのである。</q></li>
                   </ul>
                 </aside>
               </div>
@@ -220,11 +234,11 @@
               <div class="footer-txt">
                 <aside>
                   <ul>
-                    <li>下女は口惜しさうに</li>
-                    <li>吾輩を臺所へ抛り出した。</li>
-                    <li>かくして吾輩は遂に此家を</li>
-                    <li>自分の住家と</li>
-                    <li>極める事にしたのである。</li>
+                    <li><q>下女は口惜しさうに</q></li>
+                    <li><q>吾輩を臺所へ抛り出した。</q></li>
+                    <li><q>かくして吾輩は遂に此家を</q></li>
+                    <li><q>自分の住家と</q></li>
+                    <li><q>極める事にしたのである。</q></li>
                   </ul>
                 </aside>
               </div>
