--- a/index.html
+++ b/index.html
@@ -97,10 +97,10 @@
                   <img src="img/cat1-1.png" alt="抱かれている猫の写真">
                 </figure>
               </div>
-              <div class="second-block-txt order2">
+              <div class="second-block-txt order2　order-left">
                   <p>掌の上で少し落ち付いて書生の顔を見たのが所謂人間といふものゝ見始であらう。此時妙なものだと思つた感じが今でも殘つて居る。第一毛を以て装飾されべき筈の顔がつるつるして丸で薬罐だ。其後猫にも大分逢つたがこんな片輪には一度も出會はした事がない。加之顔の眞中が餘りに突起して居る。</p>
               </div>
-              <div class="second-block-txt btn order3">
+              <div class="second-block-txt btn order3 order-left">
                 <p>そうして其穴の中から時々ぷうぷうと烟を吹く。どうも咽せぽくて實に弱つた。是が人間の飲む烟草といふものである事は漸く此頃知つた。此書生の掌の裏でしばらくはよい心持に坐つて居つたが、暫くすると非常な速力で運轉し始めた。書生が動くのか自分丈が動くのか分らないが無暗に眼が廻る。胸が惡くなる。</p>
               </div>
               <div class="second-block-img order4">
@@ -113,7 +113,7 @@
                   <img src="img/cat1-3.png" alt="あくびをしている猫の写真">
                 </figure>
               </div>
-              <div class="second-block-txt order6">
+              <div class="second-block-txt order6 order-left">
                 <p>到底助からないと思つて居ると、どさりと音がして眼から火が出た。夫迄は記憶して居るがあとは何の事やらいくら考へ出さうとしても分らない。ふと氣が付いて見ると書生は居ない。澤山居つた兄弟が一疋も見えぬ。肝心の母親さへ姿を隱して仕舞つた。其上今迄の所とは違つて無暗に明るい。眼を明いて居られぬ位だ。</p>
               </div>
             </div>
@@ -124,7 +124,7 @@
               <div class="third-block-inner">
                 <div class="cat2-1">
                   <section>
-                    <figure>
+                    <figure></figure>
                       <div class="cat2-1-pic">
                         <img src="img/cat2-1.png" alt="くつろいでいる猫の写真">
                       </div>
