--- a/cat1.html
+++ b/cat1.html
@@ -30,7 +30,7 @@
                 <!-- drawer.js -->
                 <script src="https://cdnjs.cloudflare.com/ajax/libs/drawer/3.2.1/js/drawer.min.js"></script>
 
-                <body class="drawer drawer--right">
+                <div class="drawer drawer--right">
                     <header role="banner">
                         <!-- ハンバーガーボタン -->
                         <button type="button" class="drawer-toggle drawer-hamburger">
@@ -58,6 +58,7 @@
                             $('.drawer').drawer();
                         });
                     </script>
+                </div>
             </div>
         </div>
     </header>
@@ -68,7 +69,9 @@
                     <img src="cat1/IMG_20190205_113022.jpg" alt="ストーブの上に乗っているパール(猫)">
                 </div>
                 <div class="box25">
-                    <p>パール(♀)<br><br>性格は人見知り・のんびり・人間とは付かず離れずの距離が好き・寝てばっかりzzz</p>
+                    <p>
+                        <div class="catLogo">パール(♀)</div><br><br>性格は人見知り・のんびり・人間とは付かず離れずの距離が好き・寝てばっかりzzz
+                    </p>
                 </div>
                 <div class="cat1-2 cat-picture">
                     <img src="cat1/IMG_20190205_113026.jpg" alt="下から写したパール">
@@ -97,6 +100,6 @@
             </div>
         </div>
     </footer>
-</body>
+</div>
 
 </html>
