--- a/contact.html
+++ b/contact.html
@@ -7,11 +7,13 @@
     <link rel="stylesheet" href="css/style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 </head>
+
 <body>
     <header>
         <div class="header-container">
             <nav>
-                <a href="index.html" class="header-top-link" title="Home"><img src="./img/CAT-1.png" alt="トップロゴ"width="49px" height="24px"></a>
+                <a href="index.html" class="header-top-link" title="Home"><img src="./img/CAT-1.png" alt="トップロゴ"
+                        width="49px" height="24px"></a>
             </nav>
             <ul class="parent">
                 <li><a href="cat1.html" class="header-link">cat1</a></li>
@@ -78,7 +80,7 @@
                             <br>
                             <h2>猫に関するお問い合わせはこちら。</h2>
                         </div>
-                        <form action="contact-from-next" method="POST">
+                        <form action="confirm.php" method="POST">
                             <div class="form-input">
                                 <p>お名前<span class="important">必須</span><br><input type="text" name="name"></p>
                             </div>
