--- a/cat3.html
+++ b/cat3.html
@@ -1,105 +1,100 @@
 <!DOCTYPE html>
 <html lang="ja">
-
-<head>
+  <head>
     <meta charset="utf-8">
     <title>cat3</title>
     <link rel="stylesheet" href="css/style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-</head>
-
-<body>
+  </head>
+  <body>
     <header>
-        <div class="header-container">
-            <nav>
-                <a href="index.html" class="header-top-link" title="Home"><img src="./img/CAT-1.png" alt="トップロゴ"
-                        width="49px" height="24px"></a>
+      <div class="header-container">
+        <nav>
+          <a href="index.html" class="header-top-link" title="Home"><img src="./img/CAT-1.png" alt="トップロゴ" width="49px" height="24px"></a>
+        </nav>
+        <ul class="parent">
+          <li><a href="cat1.html" class="header-link">cat1</a></li>
+          <li><a href="cat2.html" class="header-link">cat2</a></li>
+          <li><a href="cat3.html" class="header-link">cat3</a></li>
+          <li><a href="contact.html" class="header-link">Contact</a></li>
+        </ul>
+        <div class="drawer-list">
+          <!-- drawer.css -->
+          <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/drawer/3.2.1/css/drawer.min.css">
+          <!-- jquery & iScroll -->
+          <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+          <script src="https://cdnjs.cloudflare.com/ajax/libs/iScroll/5.1.3/iscroll.min.js"></script>
+          <!-- drawer.js -->
+          <script src="https://cdnjs.cloudflare.com/ajax/libs/drawer/3.2.1/js/drawer.min.js"></script>
+          <body class="drawer drawer--right">
+          <header role="banner">
+            <!-- ハンバーガーボタン -->
+            <button type="button" class="drawer-toggle drawer-hamburger">
+              <span class="sr-only">toggle navigation</span>
+              <span class="drawer-hamburger-icon"></span>
+            </button>
+            <!-- ナビゲーションの中身 -->
+            <nav class="drawer-nav" role="navigation">
+              <ul class="drawer-menu">
+                <li><a class="drawer-brand" href="#">Cat Menu</a></li>
+                <li><a class="drawer-menu-item" href="index.html">Home</a></li>
+                <li><a class="drawer-menu-item" href="cat1.html">Cat1</a></li>
+                <li><a class="drawer-menu-item" href="cat2.html">Cat2</a></li>
+                <li><a class="drawer-menu-item" href="cat3.html">Cat3</a></li>
+                <li><a class="drawer-menu-item" href="contact.html">Contact</a></li>
+              </ul>
             </nav>
-            <ul class="parent">
-                <li><a href="cat1.html" class="header-link">cat1</a></li>
-                <li><a href="cat2.html" class="header-link">cat2</a></li>
-                <li><a href="cat3.html" class="header-link">cat3</a></li>
-                <li><a href="contact.html" class="header-link">Contact</a></li>
-            </ul>
-            <div class="drawer-list">
-                <!-- drawer.css -->
-                <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/drawer/3.2.1/css/drawer.min.css">
-                <!-- jquery & iScroll -->
-                <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-                <script src="https://cdnjs.cloudflare.com/ajax/libs/iScroll/5.1.3/iscroll.min.js"></script>
-                <!-- drawer.js -->
-                <script src="https://cdnjs.cloudflare.com/ajax/libs/drawer/3.2.1/js/drawer.min.js"></script>
-
-                <body class="drawer drawer--right">
-                    <header role="banner">
-                        <!-- ハンバーガーボタン -->
-                        <button type="button" class="drawer-toggle drawer-hamburger">
-                            <span class="sr-only">toggle navigation</span>
-                            <span class="drawer-hamburger-icon"></span>
-                        </button>
-                        <!-- ナビゲーションの中身 -->
-                        <nav class="drawer-nav" role="navigation">
-                            <ul class="drawer-menu">
-                                <li><a class="drawer-brand" href="#">Cat Menu</a></li>
-                                <li><a class="drawer-menu-item" href="index.html">Home</a></li>
-                                <li><a class="drawer-menu-item" href="cat1.html">Cat1</a></li>
-                                <li><a class="drawer-menu-item" href="cat2.html">Cat2</a></li>
-                                <li><a class="drawer-menu-item" href="cat3.html">Cat3</a></li>
-                                <li><a class="drawer-menu-item" href="contact.html">Contact</a></li>
-                            </ul>
-                        </nav>
-                    </header>
-                    <main role="main">
-                        <!-- Page content -->
-                    </main>
-                    <!-- ドロワーメニューの利用宣言 -->
-                    <script>
-                        $(document).ready(function () {
-                            $('.drawer').drawer();
-                        });
-                    </script>
-            </div>
+          </header>
+          <main role="main">
+            <!-- Page content -->
+          </main>
+          <!-- ドロワーメニューの利用宣言 -->
+          <script>
+            $(document).ready(function() {
+            $('.drawer').drawer();
+          });
+          </script>
         </div>
+      </div>
     </header>
     <main>
-        <div class="cat-body-container">
-            <div class="cat-same-width">
-                <div class="cat3-1 cat-picture">
-                    <img src="cat3/s_yCHka3SA.jpg" alt="目を見開いてるハリー(猫)">
-                </div>
-                <div class="box25">
-                    <p>ハリー(♂)<br><br>おっとり、甘えん坊、寂しがり、人見知り、なれるとくっつき虫</p>
-                </div>
-                <div class="cat3-2 cat-picture">
-                    <img src="cat3/s_AI1wQaVL.jpg" alt="見上げているハリー">
-                </div>
-                <div class="cat3-3 cat-picture">
-                    <img src="cat3/s_gZ2KAR2Z.jpg" alt="ゴミ箱に入っているゆき(猫)">
-                </div>
-                <div class="box25">
-                    <p>ゆき(♀)<br><br>気が強い、好奇心旺盛、急に寂しくなって甘える、人が大好き、でも触られるのは嫌い。</p>
-                </div>
-                <div class="cat3-4 cat-picture">
-                    <img src="cat3/s_OisdSkaE.jpg" alt="眠たそうに眼を閉じているゆき">
-                </div>
-                <div class="cat3-5 cat-picture cat-picture-end">
-                    <img src="cat3/s_6ziJE2L1.jpg" alt="ハリーとゆきが眠っている。">
-                </div>
-            </div>
+      <div class="cat-body-container">
+        <div class="cat-same-width">
+          <div class="cat3-1 cat-picture">
+            <img src="cat3/s_yCHka3SA.jpg" alt="目を見開いてるハリー(猫)">
+          </div>
+          <div class="box25">
+            <p>ハリー(♂)<br><br>おっとり、甘えん坊、寂しがり、人見知り、なれるとくっつき虫</p>
+          </div>
+          <div class="cat3-2 cat-picture">
+            <img src="cat3/s_AI1wQaVL.jpg" alt="見上げているハリー">
+          </div>
+          <div class="cat3-3 cat-picture">
+              <img src="cat3/s_gZ2KAR2Z.jpg" alt="ゴミ箱に入っているゆき(猫)">
+          </div>
+          <div class="box25">
+            <p>ゆき(♀)<br><br>気が強い、好奇心旺盛、急に寂しくなって甘える、人が大好き、でも触られるのは嫌い。</p>
+          </div>
+          <div class="cat3-4 cat-picture">
+              <img src="cat3/s_OisdSkaE.jpg" alt="眠たそうに眼を閉じているゆき">
+          </div>
+          <div class="cat3-5 cat-picture cat-picture-end">
+            <img src="cat3/s_6ziJE2L1.jpg" alt="ハリーとゆきが眠っている。">
+          </div>
         </div>
+      </div>
     </main>
     <footer>
-        <div class="footer-container-bottom">
-            <div class="footer-bottom-block">
-                <div class="footer-bottom-logo">
-                    <a href="index.html"><img src="img/CAT-2.png" alt="ページ下、CATのロゴ" title="Home"></a>
-                </div>
-                <div class="footer-bottom-txt">
-                    <p>copyright 2018 Iam a cat</p>
-                </div>
-            </div>
+      <div class="footer-container-bottom">
+        <div class="footer-bottom-block">
+          <div class="footer-bottom-logo">
+            <a href="index.html"><img src="img/CAT-2.png" alt="ページ下、CATのロゴ" title="Home"></a>
+          </div>
+          <div class="footer-bottom-txt">
+            <p>copyright 2018 Iam a cat</p>
+          </div>
         </div>
+      </div>
     </footer>
-</body>
-
+  </body>
 </html>
