--- a/cat1.html
+++ b/cat1.html
@@ -7,13 +7,15 @@
     <link rel="stylesheet" href="css/style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 </head>
+<style>
 
+</style>
 <body>
     <header>
         <div class="header-container">
             <nav>
-                <a href="index.html" class="header-top-link" title="Home"><img src="./img/CAT-1.png" alt="トップロゴ"
-                        width="49px" height="24px"></a>
+                <a href="index.html" class="header-top-link" title="Home">
+                    <img src="./img/CAT-1.png" alt="トップロゴ" width="49px" height="24px"></a>
             </nav>
             <ul class="parent">
                 <li><a href="cat1.html" class="header-link">cat1</a></li>
@@ -49,9 +51,6 @@
                             </ul>
                         </nav>
                     </header>
-                    <main role="main">
-                        <!-- Page content -->
-                    </main>
                     <!-- ドロワーメニューの利用宣言 -->
                     <script>
                         $(document).ready(function () {
@@ -70,7 +69,7 @@
                 </div>
                 <div class="box25">
                     <p>
-                        <div class="catLogo">パール(♀)</div><br><br>性格は人見知り・のんびり・人間とは付かず離れずの距離が好き・寝てばっかりzzz
+                        <div class="catLogo">パール(♀)</div><br><br><div class="catTxt">性格は人見知り・のんびり・人間とは付かず離れずの距離が好き・寝てばっかりzzz</div>
                     </p>
                 </div>
                 <div class="cat1-2 cat-picture">
@@ -100,6 +99,4 @@
             </div>
         </div>
     </footer>
-</div>
-
 </html>
