--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,11 @@
     <link rel="stylesheet" href="css/style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 </head>
-
+<style>
+    .err{
+        color:red;
+    }
+</style>
 <body>
     <header>
         <div class="header-container">
@@ -93,7 +97,7 @@
                             <div>
                                 <p>題名<span class="optional">任意</span><br><input type="text" name="title"></p>
                             </div>
-                            メッセージ本文<span class="optional2">任意</span>
+                            メッセージ本文<span class="important">必須</span>
                             <textarea class="contact-form-textarea" type="text" name="content"></textarea>
                             <div>
                                 <br><input type="submit" class="submit-button">
